# FEEL-Project

./: .gitignore  1_Depth_Series.csv  1_Height_Series.csv  1_Pitch_Series.csv  1_Roll_Series.csv  1_Taper_width_Series.csv  1_Yaw_Series.csv  CMakeLists.txt  Individual_Run_Fitness_History_20250803_203547.csv  Individual_Run_Fitness_History_20250803_233027.csv  Individual_Run_Fitness_History_20250803_234522.csv  Individual_Run_Fitness_History_20250804_002957.csv  Individual_Run_Fitness_History_20250804_004452.csv  Individual_Run_Fitness_History_20250804_022935.csv  Individual_Run_Fitness_History_20250804_024434.csv  Individual_Run_Fitness_History_20250804_025931.csv  Individual_Run_Fitness_History_20250804_032929.csv  Individual_Run_Fitness_History_20250804_034423.csv  Individual_Run_Fitness_History_20250804_035937.csv  Individual_Run_Fitness_History_20250804_041505.csv  Individual_Run_Fitness_History_20250804_043003.csv  Individual_Run_Fitness_History_20250804_045956.csv  Individual_Run_Fitness_History_20250804_054451.csv  Individual_Run_Fitness_History_20250804_062944.csv  Individual_Run_Fitness_History_20250804_071434.csv  Individual_Run_Fitness_History_20250804_072930.csv  Individual_Run_Fitness_History_20250804_075929.csv  Individual_Run_Fitness_History_20250804_082931.csv  Individual_Run_Fitness_History_20250804_085924.csv  Individual_Run_Fitness_History_20250804_092916.csv  Individual_Run_Fitness_History_20250804_094427.csv  Individual_Run_Fitness_History_20250804_095926.csv  Individual_Run_Fitness_History_20250807_150141.csv  Individual_Run_Fitness_History_20250807_202917.csv  Individual_Run_Fitness_History_20250807_202944.csv  Individual_Run_Fitness_History_20250807_203011.csv  Individual_Run_Fitness_History_20250807_203038.csv  Individual_Run_Fitness_History_20250807_203105.csv  Individual_Run_Fitness_History_20250807_211355.csv  Individual_Run_Fitness_History_20250807_213209.csv  (+98 more)
Data_NoPenalty/: 1_Taper_height_Series.csv
Data_Penalty/: 1_Depth_Series.csv  1_Height_Series.csv  1_Taper_width_Series.csv
cpp/: algo.cpp  algo2.cpp  bindings.cpp  mssp_dailsdjikstra.cpp  mssp_dailsdjikstra2d.cpp  mssp_dials.cu  mssp_dijkstra.cpp
python/: 3dtest.py  GA2D.py  GA2D_1.py  GA3D.py  PSO.py  SA.py  dailstest.py  (+7 more)
(+173 files in other folders)
